dongle-smartcontract/test_results_v7.txt
   Compiling dongle-contract v0.1.0 (C:\Users\user\Dongle-Smartcontract\dongle-smartcontract)
error: unknown start of token: \
   --> src\verification_registry.rs:164:15
    |
164 |         todo!(\"Verification evidence update logic not implemented\")
    |               ^

error[E0765]: unterminated double quote string
   --> src\verification_registry.rs:164:16
    |
164 |           todo!(\"Verification evidence update logic not implemented\")
    |  ________________^
165 | |     }
166 | |
167 | |     pub fn validate_evidence_cid(evidence_cid: &String) -> Result<(), ContractError> {
...   |
177 | | }
    | |__^

For more information about this error, try `rustc --explain E0765`.
error: could not compile `dongle-contract` (lib test) due to 2 previous errors
